Adapted the types: Codeset does not include location
Location is only needed once, and does not stay as attribute
of a Codeset.
It is now provided as extra argument
